[project]
name = "charge_policy_controller"
version = "0.2.0"
description = "AppDaemon app that aligns ChargePoint EV charging with FranklinWH solar production via Home Assistant"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
    "appdaemon>=4.4",
    "pytest>=8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
